# my_opengl

./: CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
src/: glad.c
